tests/type_errors/list_method_on_string.nos
# expect_error: has no method
# Issue 16: List-only methods should be caught on String at compile time
main() = "hello".head()
